# study-assistant

./: .gitignore  .gitmodules  README.md  app.py  command.txt  currentBug  e -i HEAD~2  launch.ps1  run.bat  run.txt  run_dev.bat  run_edge.bat  start_dev_env.bat
backend/: app.py  browser_bridge.py  cache_manager.py  cache_monitoring.py  code_converter_routes.py  code_graph_engine.py  code_graph_utils.py  config.py  media_routes.py  paper_solver_routes.py  requirements.txt  services.py  study_hub_routes.py  sync_logic.py  sync_service_routes.py  tasks.py  test_key.py  test_sync_system.py  utils.py
backend/templates/: workspace.html
backend/vector_stores/yfA3qYZPvM7R5R1RcTkn/: faiss.index  metadata.pkl
backend_cpp/: CMakeLists.txt  dashboard.html  keys.json  vcpkg.json
backend_cpp/include/: KeyManager.hpp  LogManager.hpp  PrefixTrie.hpp  SystemMonitor.hpp  ThreadPool.hpp  cache_manager.hpp  code_graph.hpp  embedding_service.hpp  faiss_vector_store.hpp  parser_elite.hpp  retrieval_engine.hpp  sync_service.hpp
backend_cpp/include/agent/: AgentExecutor.hpp  AgentTypes.hpp  ContextManager.hpp  SubAgent.hpp
backend_cpp/include/memory/: MemoryVault.hpp
backend_cpp/include/tools/: AtomicJournal.hpp  FileSurgicalTool.hpp  FileSystemTools.hpp  ToolRegistry.hpp
backend_cpp/proto/: agent.proto
backend_cpp/src/: agent_main.cpp  code_graph.cpp  embedding_service.cpp  faiss_vector_store.cpp  main.cpp  parser_elite.cpp  retrieval_engine.cpp  sync_service.cpp  ts_cpp_bridge.cpp  ts_typescript_bridge.cpp
backend_cpp/src/agent/: AgentExecutor.cpp  AgentService.cpp  SubAgent.cpp
backend_cpp/src/tools/: FileSystemTools.cpp  VisionTool.cpp  WebSearchTool.cpp
backend_cpp/test/: agent_pb2.py  agent_pb2_grpc.py  ast_diagnostic.py  dev_ops.py  evaluate_generation.py  evaluate_retrieval.py  flight_test_suite.py  golden_data.json  probe_sync.py  read_logs.py  rebuild_protos.py  requirements.txt  run_benchmark.py  targeted_flight_test.py  test_agent.py  test_quality.py
backend_cpp/test/reports/: report_ZDpcUHJvamVjdHNcZW50aXRsZW1lbnQtc3lzdGVt_20251218_151710.csv  report_ZDpcUHJvamVjdHNcZW50aXRsZW1lbnQtc3lzdGVt_20251218_151820.csv
backend_cpp/www/: index.html  main.js  style.css
documentation/: InstallationGuide_v1.0.txt  Overall_Plan_v1.0.txt  Overall_Plan_v2.1.txt  Phase_v1.0.txt
extension/: README.md  package-lock.json  package.json
extension/media/: chat.css  chat.html  chat.js
extension/src/: extension.ts  localBackend.ts
extension/src/providers/: CodeChatProvider.ts  CodeConfigProvider.ts  CompletionProvider.ts  PaperSolverProvider.ts  SidebarProvider.ts  StudyHubProvider.ts
extension/src/services/: BackendClient.ts
frontend/: README.md  firebase.json  pubspec.yaml
frontend/android/app/: build.gradle.kts  google-services.json
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/study_assistance/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: firebase_options.dart  main.dart
frontend/lib/api/: api_service.dart
frontend/lib/models/: code_project.dart  dependency_graph.dart  past_paper.dart  project.dart  sync_config.dart
frontend/lib/provider/: project_provider.dart
frontend/lib/screens/: code_sync_desktop_layout.dart  code_sync_mobile_layout.dart  code_sync_panels.dart  code_sync_screen.dart  dashboard_screen.dart  desktop_study_layout.dart  home_screen.dart  local_converter_screen.dart  login_screen.dart  mobile_study_layout.dart  paper_solver_view.dart  workspace_panels.dart  workspace_screen.dart
frontend/lib/services/: auth_service.dart  firestore_image_service.dart  local_converter_service.dart
frontend/lib/widgets/: auth_wrapper.dart  dependency_cassette.dart  firestore_image.dart  tracking_mind_map.dart
frontend/linux/: CMakeLists.txt
frontend/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/linux/runner/: my_application.cc
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/website/templates/: workspace.html
frontend/windows/: CMakeLists.txt
frontend/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/windows/runner/: Runner.rc  main.cpp
study-assistance/: CHANGELOG.md  package-lock.json
study-assistance/src/: extension.ts
study-assistance/src/providers/: CodeChatProvider.ts  completionProvider.ts
study-assistance/src/services/: BackendClient.ts
templates/: dashboard.html  workspace.html
